--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,18 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+    <display-name>Archetype Created Web Application</display-name>
 
-  <servlet>
-    <servlet-name>first-servlet-name</servlet-name>
-    <servlet-class>com.tms.FirstServlet</servlet-class>
-  </servlet>
+    <filter>
+        <filter-name>my-filter</filter-name>
+        <filter-class>com.tms.filters.MyFirstFilter</filter-class>
+    </filter>
 
-  <servlet-mapping>
-    <servlet-name>first-servlet-name</servlet-name>
-    <url-pattern>/c65</url-pattern>
-  </servlet-mapping>
+    <filter-mapping>
+        <filter-name>my-filter</filter-name>
+        <url-pattern>/c65annotation</url-pattern>
+    </filter-mapping>
 
 </web-app>
